--- a/src/index.css
+++ b/src/index.css
@@ -15,42 +15,57 @@
     color: rgba(249, 249, 249, 1);
 }
 
+/* .movies .trending .swiper-button-prev,
+.movies .trending .swiper-button-next {
+  background-color: white;
+  width: 80px;
+  height: 80px;
+  border: 1px solid gray;
+  border-radius: 50%;
+  box-sizing: border-box;
+} */
 
+.movies .trending .swiper-button-prev::after,
+.movies .trending .swiper-button-next::after {
+  content: "";
+}
 
-.slick-dots {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
+.movies .trending .swiper-button-prev {
+    background-image: url("./assets/imgs/prevbtn.svg");
+    background-size: contain;
+    background-position: 50% 60%;
+    width: 50px;
+    background-repeat: no-repeat;
+
+}
+
+.movies .trending .swiper-button-next {
+    background-image: url("./assets/imgs/nextbtn.svg");
+    background-size: contain;
+    background-position: 50% 60%;
+    width: 50px;
+    background-repeat: no-repeat;
+
+}
+
+.movies .trending .swiper-pagination {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 200px;
     background-color: rgba(249, 249, 249, 0.2);
-    position: absolute;
-    right: 50%;
-    transform: translateX(50%);
-    width: 140px;
+    border-radius: 5px;
     height: 25px;
+    margin-bottom: 20px;
 }
-.slick-dots li {
+
+.movies .trending .swiper-pagination-bullet {
     background-color: rgba(249, 249, 249, 1);
-    border-radius: 100%;
     width: 10px;
     height: 10px;
 }
-
-.slick-dots button {
-    display: block;
-    /*border: none;*/
-    border-radius: 100%;
-    text-indent: -9999px;
-    width: 10px;
-    height: 10px;
-}
-
-.slick-dots li.slick-active button {
-    position: absolute;
+.movies .trending .swiper-pagination-bullet-active {
     background-color: #00B9AE;
     width: 10px;
     height: 10px;
-}
-
-.slick-active {
-    /*margin-bottom: 10px;*/
 }
