--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@
     border: 3px solid rgba(249, 249, 249, 0.2);
 }
 
+/* .movies {
+    overflow: hidden;
+} */
+
 .parent {
     background-color: rgba(249, 249, 249, 0.2);
 }
